--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/svelte": "^3.1.0",
     "@astrojs/tailwind": "^4.0.0",
     "astro": "^2.10.7",
+    "svelte": "^4.0.0",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
