--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
+  "plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"],
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "printWidth": 80
 }
