--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@astrojs/svelte": "^3.1.0",
     "@astrojs/tailwind": "^4.0.0",
     "astro": "^2.10.7",
-    "svelte": "^4.0.0",
+    "svelte": "^4.2.0",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
+    "@catppuccin/tailwindcss": "^0.1.6",
     "prettier": "^3.0.1",
+    "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.5.2"
   }
 }
