--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/svelte": "^3.1.1",
-    "@astrojs/tailwind": "^4.0.0",
-    "astro": "^2.10.15",
-    "svelte": "^4.2.19",
-    "tailwindcss": "^3.4.9"
+    "@astrojs/tailwind": "^6.0.2",
+    "astro": "^5.13.7",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@catppuccin/tailwindcss": "^0.1.6",
-    "prettier": "^3.3.3",
+    "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.5.14"
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "typescript": "^5.9.2"
   }
 }
